--- a/Test/TJAPlayer3.exe.config
+++ b/Test/TJAPlayer3.exe.config
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <configuration>
-	<startup><supportedRuntime version="v2.0.50727"/></startup>
+  <startup useLegacyV2RuntimeActivationPolicy="true">
+    <supportedRuntime version="v4.0"/>
+    <supportedRuntime version="v2.0.50727"/>
+  </startup>
 	<runtime>
 		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
 			<probing privatePath="dll"/>
