リザルト移植

--- a/Test/Songs/08-ナムコオリジナル/97,memoria ficta.tja.score.ini
+++ b/Test/Songs/08-ナムコオリジナル/97,memoria ficta.tja.score.ini
@@ -2,33 +2,33 @@
 Title=memoria ficta
 Name=97,memoria ficta.tja
 Hash=1ed2d14393b99d0d285fe24678f75fee
-PlayCountDrums=22
+PlayCountDrums=23
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=13
+ClearCountDrums=14
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=22
-History0=22.20/11/13 Play canceled
-History1=21.20/10/5 Cleared (No chips)
-History2=20.20/10/5 Play canceled
-History3=19.20/10/5 Cleared (No chips)
-History4=18.20/10/1 Cleared (No chips)
+HistoryCount=23
+History0=23.20/11/14 Cleared (No chips)
+History1=22.20/11/13 Play canceled
+History2=21.20/10/5 Cleared (No chips)
+History3=20.20/10/5 Play canceled
+History4=19.20/10/5 Cleared (No chips)
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=1004420
+Score=950062
 PlaySkill=0
-Skill=0
-Perfect=683
-Great=60
+Skill=Infinity
+Perfect=657
+Great=86
 Good=0
 Poor=0
 Miss=4
-MaxCombo=381
+MaxCombo=317
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -68,9 +68,9 @@ PerfectRange=30
 GreatRange=-1
 GoodRange=100
 PoorRange=130
-DTXManiaVersion=1.0.1
-DateTime=10/05/2020 20:57:09
-Hash=febb41348cff314edef29608d7e6ecc8
+DTXManiaVersion=1.5.7
+DateTime=11/14/2020 11:12:54
+Hash=b769ad3f448deb05580795fc25e32d3e
 HiScore1=0
 HiScore2=0
 HiScore3=0
