演奏画面=>リザルト画面のフェードを実装

--- a/Test/Songs/08-ナムコオリジナル/97,memoria ficta.tja.score.ini
+++ b/Test/Songs/08-ナムコオリジナル/97,memoria ficta.tja.score.ini
@@ -2,33 +2,33 @@
 Title=memoria ficta
 Name=97,memoria ficta.tja
 Hash=1ed2d14393b99d0d285fe24678f75fee
-PlayCountDrums=23
+PlayCountDrums=25
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=14
+ClearCountDrums=16
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=23
-History0=23.20/11/14 Cleared (No chips)
-History1=22.20/11/13 Play canceled
-History2=21.20/10/5 Cleared (No chips)
-History3=20.20/10/5 Play canceled
-History4=19.20/10/5 Cleared (No chips)
+HistoryCount=25
+History0=25.20/11/14 Cleared (No chips)
+History1=24.20/11/14 Cleared (No chips)
+History2=23.20/11/14 Cleared (No chips)
+History3=22.20/11/13 Play canceled
+History4=21.20/10/5 Cleared (No chips)
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=950062
+Score=1042032
 PlaySkill=0
 Skill=Infinity
-Perfect=657
-Great=86
+Perfect=681
+Great=61
 Good=0
 Poor=0
-Miss=4
-MaxCombo=317
+Miss=5
+MaxCombo=369
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -69,12 +69,12 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=11/14/2020 11:12:54
-Hash=b769ad3f448deb05580795fc25e32d3e
+DateTime=11/14/2020 16:47:06
+Hash=528b77a4df0d47f89368ae9dc0b9579e
 HiScore1=0
 HiScore2=0
 HiScore3=0
-HiScore4=1004420
+HiScore4=1160462
 HiScore5=0
 Roll1=0
 Roll2=0
