背景フェード実装、F8でランダム選曲できるように、SENotesの本家化、ニジイロ配点実装、ChipEffectの実装

--- a/Test/Songs/08-ナムコオリジナル/93,クラポルポルスカ.tja.score.ini
+++ b/Test/Songs/08-ナムコオリジナル/93,クラポルポルスカ.tja.score.ini
@@ -2,7 +2,7 @@
 Title=クラポルポルスカ
 Name=93,クラポルポルスカ.tja
 Hash=3ac34e694919dbe714b80704e74716c7
-PlayCountDrums=2
+PlayCountDrums=3
 PlayCountGuitars=0
 PlayCountBass=0
 ClearCountDrums=2
@@ -11,10 +11,10 @@ ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=2
-History0=2.20/11/14 Cleared (No chips)
-History1=1.20/11/14 Cleared (No chips)
-History2=
+HistoryCount=3
+History0=3.20/11/22 Play canceled
+History1=2.20/11/14 Cleared (No chips)
+History2=1.20/11/14 Cleared (No chips)
 History3=
 History4=
 BGMAdjust=0
@@ -22,7 +22,7 @@ BGMAdjust=0
 [HiScore.Drums]
 Score=794140
 PlaySkill=0
-Skill=Infinity
+Skill=0
 Perfect=604
 Great=107
 Good=0
@@ -394,7 +394,7 @@ Roll5=0
 [LastPlay.Drums]
 Score=794140
 PlaySkill=0
-Skill=Infinity
+Skill=0
 Perfect=604
 Great=107
 Good=0
