--- a/Test/Songs/08-ナムコオリジナル/98,TOKIMEKI・ですとろいやー！！.tja.score.ini
+++ b/Test/Songs/08-ナムコオリジナル/98,TOKIMEKI・ですとろいやー！！.tja.score.ini
@@ -1,34 +1,34 @@
 [File]
-Title=memoria ficta
-Name=97,memoria ficta.tja
-Hash=1ed2d14393b99d0d285fe24678f75fee
-PlayCountDrums=29
+Title=TOKIMEKI・ですとろいやー！！
+Name=98,TOKIMEKI・ですとろいやー！！.tja
+Hash=9582515bfc8db941e6bd569bc2b32e6e
+PlayCountDrums=1
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=18
+ClearCountDrums=0
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=29
-History0=29.20/11/22 Play canceled
-History1=28.20/11/22 Play canceled
-History2=27.20/11/21 Cleared (No chips)
-History3=26.20/11/20 Cleared (No chips)
-History4=25.20/11/14 Cleared (No chips)
+HistoryCount=1
+History0=1.20/11/22 Play canceled
+History1=
+History2=
+History3=
+History4=
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=898482
+Score=0
 PlaySkill=0
 Skill=0
-Perfect=646
-Great=94
+Perfect=0
+Great=0
 Good=0
 Poor=0
-Miss=7
-MaxCombo=356
+Miss=0
+MaxCombo=0
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -60,7 +60,7 @@ Guitar=1
 Drums=1
 StageFailed=1
 DamageLevel=1
-UseKeyboard=1
+UseKeyboard=0
 UseMIDIIN=0
 UseJoypad=0
 UseMouse=0
@@ -68,13 +68,13 @@ PerfectRange=30
 GreatRange=-1
 GoodRange=100
 PoorRange=130
-DTXManiaVersion=1.5.7
-DateTime=11/21/2020 17:24:13
-Hash=1a9d004a018321ffae3535f42ccc4227
+DTXManiaVersion=Unknown
+DateTime=
+Hash=00000000000000000000000000000000
 HiScore1=0
 HiScore2=0
 HiScore3=0
-HiScore4=1178846
+HiScore4=0
 HiScore5=0
 Roll1=0
 Roll2=0
@@ -126,10 +126,10 @@ UseKeyboard=0
 UseMIDIIN=0
 UseJoypad=0
 UseMouse=0
-PerfectRange=34
-GreatRange=67
-GoodRange=84
-PoorRange=117
+PerfectRange=30
+GreatRange=-1
+GoodRange=100
+PoorRange=130
 DTXManiaVersion=Unknown
 DateTime=
 Hash=00000000000000000000000000000000
@@ -188,10 +188,10 @@ UseKeyboard=0
 UseMIDIIN=0
 UseJoypad=0
 UseMouse=0
-PerfectRange=34
-GreatRange=67
-GoodRange=84
-PoorRange=117
+PerfectRange=30
+GreatRange=-1
+GoodRange=100
+PoorRange=130
 DTXManiaVersion=Unknown
 DateTime=
 Hash=00000000000000000000000000000000
@@ -250,10 +250,10 @@ UseKeyboard=0
 UseMIDIIN=0
 UseJoypad=0
 UseMouse=0
-PerfectRange=34
-GreatRange=67
-GoodRange=84
-PoorRange=117
+PerfectRange=30
+GreatRange=-1
+GoodRange=100
+PoorRange=130
 DTXManiaVersion=Unknown
 DateTime=
 Hash=00000000000000000000000000000000
@@ -312,10 +312,10 @@ UseKeyboard=0
 UseMIDIIN=0
 UseJoypad=0
 UseMouse=0
-PerfectRange=34
-GreatRange=67
-GoodRange=84
-PoorRange=117
+PerfectRange=30
+GreatRange=-1
+GoodRange=100
+PoorRange=130
 DTXManiaVersion=Unknown
 DateTime=
 Hash=00000000000000000000000000000000
@@ -374,10 +374,10 @@ UseKeyboard=0
 UseMIDIIN=0
 UseJoypad=0
 UseMouse=0
-PerfectRange=34
-GreatRange=67
-GoodRange=84
-PoorRange=117
+PerfectRange=30
+GreatRange=-1
+GoodRange=100
+PoorRange=130
 DTXManiaVersion=Unknown
 DateTime=
 Hash=00000000000000000000000000000000
