画像こみっつ～

--- a/Test/Songs/08-ナムコオリジナル/97,memoria ficta.tja.score.ini
+++ b/Test/Songs/08-ナムコオリジナル/97,memoria ficta.tja.score.ini
@@ -2,33 +2,33 @@
 Title=memoria ficta
 Name=97,memoria ficta.tja
 Hash=1ed2d14393b99d0d285fe24678f75fee
-PlayCountDrums=33
+PlayCountDrums=34
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=21
+ClearCountDrums=22
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=33
-History0=33.20/11/23 Play canceled
-History1=32.20/11/23 Cleared (No chips)
-History2=31.20/11/23 Cleared (No chips)
-History3=30.20/11/23 Cleared (No chips)
-History4=29.20/11/22 Play canceled
+HistoryCount=34
+History0=34.20/11/23 Cleared (No chips)
+History1=33.20/11/23 Play canceled
+History2=32.20/11/23 Cleared (No chips)
+History3=31.20/11/23 Cleared (No chips)
+History4=30.20/11/23 Cleared (No chips)
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=978280
+Score=315060
 PlaySkill=0
-Skill=0
-Perfect=683
-Great=64
+Skill=Infinity
+Perfect=185
+Great=98
 Good=0
 Poor=0
-Miss=0
-MaxCombo=747
+Miss=464
+MaxCombo=70
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -69,8 +69,8 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=11/23/2020 01:47:07
-Hash=36c34957669b6e38a3331c85111cb13a
+DateTime=11/23/2020 11:38:23
+Hash=4633b77361013f2e825ddc932a0e28ee
 HiScore1=0
 HiScore2=0
 HiScore3=0
