難易度選択画面の仮実装、コンボバルーンの実装(開発進度遅くてすまん！)

--- a/Test/Songs/07-ゲームバラエティ/4.955 やわらか戦車/やわらか戦車.tja.score.ini
+++ b/Test/Songs/07-ゲームバラエティ/4.955 やわらか戦車/やわらか戦車.tja.score.ini
@@ -1,34 +1,34 @@
 [File]
-Title=memoria ficta
-Name=97,memoria ficta.tja
-Hash=1ed2d14393b99d0d285fe24678f75fee
-PlayCountDrums=38
+Title=Ç‚ÇÌÇÁÇ©êÌé‘
+Name=Ç‚ÇÌÇÁÇ©êÌé‘.tja
+Hash=2f176fbacf43d8e25ca0ede12395ec1b
+PlayCountDrums=8
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=24
+ClearCountDrums=6
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=38
-History0=38.20/11/30 Play canceled
-History1=37.20/11/29 Cleared (No chips)
-History2=36.20/11/26 Play canceled
-History3=35.20/11/23 Cleared (No chips)
-History4=34.20/11/23 Cleared (No chips)
+HistoryCount=8
+History0=8.20/11/30 Cleared (No chips)
+History1=7.20/11/30 Cleared (No chips)
+History2=6.20/11/29 Cleared (No chips)
+History3=5.20/11/29 Play canceled
+History4=4.20/11/29 Cleared (No chips)
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=981960
+Score=119500
 PlaySkill=0
 Skill=0
-Perfect=683
-Great=64
+Perfect=78
+Great=56
 Good=0
 Poor=0
-Miss=0
-MaxCombo=747
+Miss=4
+MaxCombo=71
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -52,10 +52,10 @@ LightBass=0
 LeftGuitar=0
 LeftBass=0
 Dark=0
-ScrollSpeedDrums=1
+ScrollSpeedDrums=2
 ScrollSpeedGuitar=1
 ScrollSpeedBass=1
-PlaySpeed=20/20
+PlaySpeed=40/20
 Guitar=1
 Drums=1
 StageFailed=1
@@ -69,13 +69,13 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=11/29/2020 00:59:57
-Hash=705053f0ec17a893704cba8de76ccaaf
+DateTime=11/30/2020 20:52:11
+Hash=efca03e2464869464b118c7f0f323e8e
 HiScore1=0
 HiScore2=0
 HiScore3=0
-HiScore4=1178846
-HiScore5=0
+HiScore4=0
+HiScore5=741970
 Roll1=0
 Roll2=0
 Roll3=0
@@ -126,10 +126,10 @@ UseKeyboard=0
 UseMIDIIN=0
 UseJoypad=0
 UseMouse=0
-PerfectRange=34
-GreatRange=67
-GoodRange=84
-PoorRange=117
+PerfectRange=30
+GreatRange=-1
+GoodRange=100
+PoorRange=130
 DTXManiaVersion=Unknown
 DateTime=
 Hash=00000000000000000000000000000000
@@ -188,10 +188,10 @@ UseKeyboard=0
 UseMIDIIN=0
 UseJoypad=0
 UseMouse=0
-PerfectRange=34
-GreatRange=67
-GoodRange=84
-PoorRange=117
+PerfectRange=30
+GreatRange=-1
+GoodRange=100
+PoorRange=130
 DTXManiaVersion=Unknown
 DateTime=
 Hash=00000000000000000000000000000000
@@ -250,10 +250,10 @@ UseKeyboard=0
 UseMIDIIN=0
 UseJoypad=0
 UseMouse=0
-PerfectRange=34
-GreatRange=67
-GoodRange=84
-PoorRange=117
+PerfectRange=30
+GreatRange=-1
+GoodRange=100
+PoorRange=130
 DTXManiaVersion=Unknown
 DateTime=
 Hash=00000000000000000000000000000000
@@ -312,10 +312,10 @@ UseKeyboard=0
 UseMIDIIN=0
 UseJoypad=0
 UseMouse=0
-PerfectRange=34
-GreatRange=67
-GoodRange=84
-PoorRange=117
+PerfectRange=30
+GreatRange=-1
+GoodRange=100
+PoorRange=130
 DTXManiaVersion=Unknown
 DateTime=
 Hash=00000000000000000000000000000000
@@ -374,10 +374,10 @@ UseKeyboard=0
 UseMIDIIN=0
 UseJoypad=0
 UseMouse=0
-PerfectRange=34
-GreatRange=67
-GoodRange=84
-PoorRange=117
+PerfectRange=30
+GreatRange=-1
+GoodRange=100
+PoorRange=130
 DTXManiaVersion=Unknown
 DateTime=
 Hash=00000000000000000000000000000000
