--- a/Test/Songs/green10/グリーン十段.tja.score.ini
+++ b/Test/Songs/green10/グリーン十段.tja.score.ini
@@ -2,33 +2,33 @@
 Title=十段
 Name=グリーン十段.tja
 Hash=0be3ab549fe387c4a6e541c504aa91a2
-PlayCountDrums=8
+PlayCountDrums=13
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=4
+ClearCountDrums=6
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=8
-History0=8.20/11/25 Cleared (No chips)
-History1=7.20/11/25 Play canceled
-History2=6.20/11/24 Cleared (No chips)
-History3=5.20/11/24 Cleared (No chips)
-History4=4.20/11/24 Cleared (No chips)
+HistoryCount=13
+History0=13.20/11/29 Play canceled
+History1=12.20/11/29 Play canceled
+History2=11.20/11/29 Cleared (No chips)
+History3=10.20/11/27 Cleared (No chips)
+History4=9.20/11/26 Play canceled
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=341720
+Score=312000
 PlaySkill=0
-Skill=Infinity
-Perfect=860
-Great=64
+Skill=0
+Perfect=784
+Great=92
 Good=0
 Poor=0
-Miss=6
-MaxCombo=693
+Miss=49
+MaxCombo=839
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -69,8 +69,8 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=11/25/2020 23:18:46
-Hash=6d2ed4049cb6921ee8179b2ed0cfcba9
+DateTime=11/29/2020 01:48:27
+Hash=9b43086e771815ea7a0516f0d0f51a27
 HiScore1=0
 HiScore2=0
 HiScore3=0
