--- a/Test/Songs/08-ナムコオリジナル/Vixtory/Vixtory.tja.score.ini
+++ b/Test/Songs/08-ナムコオリジナル/Vixtory/Vixtory.tja.score.ini
@@ -2,33 +2,33 @@
 Title=Vixtory
 Name=Vixtory.tja
 Hash=43e5556155d78fef399f233483ed81cb
-PlayCountDrums=7
+PlayCountDrums=36
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=5
+ClearCountDrums=17
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=7
-History0=7.20/11/25 Cleared (No chips)
-History1=6.20/11/25 Play canceled
-History2=5.20/11/25 Cleared (No chips)
-History3=4.20/11/25 Play canceled
-History4=3.20/11/25 Cleared (No chips)
+HistoryCount=36
+History0=36.20/11/30 Play canceled
+History1=35.20/11/29 Play canceled
+History2=34.20/11/29 Play canceled
+History3=33.20/11/29 Play canceled
+History4=32.20/11/29 Play canceled
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=993960
+Score=957100
 PlaySkill=0
-Skill=Infinity
-Perfect=972
-Great=238
+Skill=0
+Perfect=936
+Great=281
 Good=0
 Poor=0
-Miss=30
-MaxCombo=229
+Miss=23
+MaxCombo=171
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -55,7 +55,7 @@ Dark=0
 ScrollSpeedDrums=1
 ScrollSpeedGuitar=1
 ScrollSpeedBass=1
-PlaySpeed=17/20
+PlaySpeed=20/20
 Guitar=1
 Drums=1
 StageFailed=1
@@ -69,8 +69,8 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=11/25/2020 20:39:55
-Hash=3f1b04695492e7a2448746e78f0c9ef4
+DateTime=11/29/2020 01:54:31
+Hash=83cc77bcafc4566cf1816d16f8d6e05e
 HiScore1=0
 HiScore2=0
 HiScore3=0
