難易度選択画面の移動制限、SkinConfigの表示、BPMがマイナスの時にフリーズするやつを修正、コンボの羽修正、2P実装準備、コンボバルーンの座標修正(4桁以降時)

--- a/Test/System/SimpleStyle/SkinConfig.ini
+++ b/Test/System/SimpleStyle/SkinConfig.ini
@@ -1,8 +1,8 @@
 ;ƒXƒLƒ“‚Ìî•ñİ’è
 ;Skin information
-Name=SimpleStyle
-Version=1.5
-Creator=AioiLight
+Name=Develop-Style
+Version=0.1
+Creator=touhou-renren and discord server menber
 
 Game_Score_Size=26,34
 
@@ -18,7 +18,7 @@ SongSelect_NamePlate_Y=610, 610
 
 Game_Notes_Anime=1
 
-Game_CourseSymbol_X=30,0
+Game_CourseSymbol_X=30,30
 
 Game_CourseSymbol_Y=233,396
 
