--- a/Test/Songs/08-ナムコオリジナル/Vixtory/Vixtory.tja.score.ini
+++ b/Test/Songs/08-ナムコオリジナル/Vixtory/Vixtory.tja.score.ini
@@ -2,33 +2,33 @@
 Title=Vixtory
 Name=Vixtory.tja
 Hash=43e5556155d78fef399f233483ed81cb
-PlayCountDrums=36
+PlayCountDrums=37
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=17
+ClearCountDrums=18
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=36
-History0=36.20/11/30 Play canceled
-History1=35.20/11/29 Play canceled
-History2=34.20/11/29 Play canceled
-History3=33.20/11/29 Play canceled
-History4=32.20/11/29 Play canceled
+HistoryCount=37
+History0=37.20/12/2 Cleared (No chips)
+History1=36.20/11/30 Play canceled
+History2=35.20/11/29 Play canceled
+History3=34.20/11/29 Play canceled
+History4=33.20/11/29 Play canceled
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=957100
+Score=780310
 PlaySkill=0
-Skill=0
-Perfect=936
-Great=281
+Skill=Infinity
+Perfect=801
+Great=290
 Good=0
 Poor=0
-Miss=23
-MaxCombo=171
+Miss=149
+MaxCombo=202
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -69,8 +69,8 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=11/29/2020 01:54:31
-Hash=83cc77bcafc4566cf1816d16f8d6e05e
+DateTime=12/02/2020 21:43:53
+Hash=d55870d394f5de5c635c69dca3be36ba
 HiScore1=0
 HiScore2=0
 HiScore3=0
