--- a/FDK19/FDK19.csproj
+++ b/FDK19/FDK19.csproj
@@ -64,8 +64,8 @@
       <HintPath>..\Test\dll\DirectShowLib-2005.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="SlimDX">
-      <HintPath>..\Test\dll\SlimDX.dll</HintPath>
+    <Reference Include="SlimDX, Version=2.0.13.43, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=x86">
+      <HintPath>..\packages\SlimDX.4.0.13.44\lib\NET20\SlimDX.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
