--- a/TJAPlayer3/TJAPlayer3.csproj
+++ b/TJAPlayer3/TJAPlayer3.csproj
@@ -84,6 +84,9 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.VisualBasic" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\Test\dll\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="SlimDX, Version=2.0.13.43, Culture=neutral, PublicKeyToken=b1b0c32fd1ffe4f9, processorArchitecture=x86">
       <HintPath>..\packages\SlimDX.4.0.13.44\lib\NET20\SlimDX.dll</HintPath>
     </Reference>
@@ -104,7 +107,9 @@
     <Compile Include="Animations\FadeOut.cs" />
     <Compile Include="Animations\IAnimatable.cs" />
     <Compile Include="Animations\Linear.cs" />
+    <Compile Include="Common\ConfigManager.cs" />
     <Compile Include="Common\Discord.cs" />
+    <Compile Include="Common\NamePlateConfig.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Discord.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -253,6 +258,7 @@
     <Compile Include="Stages\CActLVLNFont.cs" />
     <Compile Include="Stages\CActオプションパネル.cs" />
     <Compile Include="Stages\CDTXVmode.cs" />
+    <Compile Include="Stages\CNamePlate.cs" />
     <Compile Include="Stages\CStage.cs" />
     <Compile Include="Plugins\CPluginHost.cs" />
     <Compile Include="Plugins\IPluginActivity.cs" />
