--- a/Test/Songs/08-ナムコオリジナル/97,memoria ficta.tja.score.ini
+++ b/Test/Songs/08-ナムコオリジナル/97,memoria ficta.tja.score.ini
@@ -2,33 +2,33 @@
 Title=memoria ficta
 Name=97,memoria ficta.tja
 Hash=1ed2d14393b99d0d285fe24678f75fee
-PlayCountDrums=38
+PlayCountDrums=39
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=24
+ClearCountDrums=25
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=38
-History0=38.20/11/30 Play canceled
-History1=37.20/11/29 Cleared (No chips)
-History2=36.20/11/26 Play canceled
-History3=35.20/11/23 Cleared (No chips)
-History4=34.20/11/23 Cleared (No chips)
+HistoryCount=39
+History0=39.20/12/6 Cleared (No chips)
+History1=38.20/11/30 Play canceled
+History2=37.20/11/29 Cleared (No chips)
+History3=36.20/11/26 Play canceled
+History4=35.20/11/23 Cleared (No chips)
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=981960
+Score=946940
 PlaySkill=0
-Skill=0
-Perfect=683
-Great=64
+Skill=Infinity
+Perfect=638
+Great=108
 Good=0
 Poor=0
-Miss=0
-MaxCombo=747
+Miss=1
+MaxCombo=394
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -69,8 +69,8 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=11/29/2020 00:59:57
-Hash=705053f0ec17a893704cba8de76ccaaf
+DateTime=12/06/2020 13:36:17
+Hash=14e80755c09bac8eac2357ef24141d03
 HiScore1=0
 HiScore2=0
 HiScore3=0
