--- a/Test/Songs/08-ナムコオリジナル/Vixtory/Vixtory.tja.score.ini
+++ b/Test/Songs/08-ナムコオリジナル/Vixtory/Vixtory.tja.score.ini
@@ -2,33 +2,33 @@
 Title=Vixtory
 Name=Vixtory.tja
 Hash=43e5556155d78fef399f233483ed81cb
-PlayCountDrums=37
+PlayCountDrums=39
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=18
+ClearCountDrums=19
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=37
-History0=37.20/12/2 Cleared (No chips)
-History1=36.20/11/30 Play canceled
-History2=35.20/11/29 Play canceled
-History3=34.20/11/29 Play canceled
-History4=33.20/11/29 Play canceled
+HistoryCount=39
+History0=39.20/12/6 Play canceled
+History1=38.20/12/3 Cleared (No chips)
+History2=37.20/12/2 Cleared (No chips)
+History3=36.20/11/30 Play canceled
+History4=35.20/11/29 Play canceled
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=780310
+Score=906810
 PlaySkill=0
-Skill=Infinity
-Perfect=801
-Great=290
+Skill=0
+Perfect=853
+Great=346
 Good=0
 Poor=0
-Miss=149
-MaxCombo=202
+Miss=41
+MaxCombo=222
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -69,8 +69,8 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=12/02/2020 21:43:53
-Hash=d55870d394f5de5c635c69dca3be36ba
+DateTime=12/03/2020 20:48:22
+Hash=c2da7805212c2b6d6a7290c762a2b69b
 HiScore1=0
 HiScore2=0
 HiScore3=0
