--- a/FDK19/FDK19.csproj
+++ b/FDK19/FDK19.csproj
@@ -50,7 +50,7 @@
     <DefineConstants>TRACE;TEST_ENGLISH_ TEST_Direct3D9Ex_</DefineConstants>
     <Optimize>true</Optimize>
     <LangVersion>7.3</LangVersion>
-    <DebugType>pdbonly</DebugType>
+    <DebugType>full</DebugType>
     <DebugSymbols>true</DebugSymbols>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
