PR用コミット(2P用画像、座標修正、コースシンボル(表鬼のみ))

--- a/Test/System/SimpleStyle/SkinConfig.ini
+++ b/Test/System/SimpleStyle/SkinConfig.ini
@@ -20,17 +20,21 @@ Game_CourseSymbol_X=30,30
 
 Game_CourseSymbol_Y=233,426
 
-Game_Score_X=35,35
+Game_Score_X=25,25
 
-Game_Score_Y=226,530
+Game_Score_Y=229,529
 
-Game_Score_Add_X=35,35
+Game_Score_Add_X=27,27
 
-Game_Score_Add_Y=189,570
+Game_Score_Add_Y=187,569
 
 Game_ScoreAddBonus_X=55,55
 
-Game_ScoreAddBonus_Y=318,626
+Game_ScoreAddBonus_Y=318,434
+
+Game_Score_Padding=21
+
+Game_Score_Size=26,34
 
 ;ÉLÉÉÉâÇÃXç¿ïWÅB(1P,2P)
 Game_Chara_X=0,0
