DP時の選曲、演奏のどんちゃん実装！！！

--- a/Test/Songs/08-ナムコオリジナル/97,memoria ficta.tja.score.ini
+++ b/Test/Songs/08-ナムコオリジナル/97,memoria ficta.tja.score.ini
@@ -2,33 +2,33 @@
 Title=memoria ficta
 Name=97,memoria ficta.tja
 Hash=1ed2d14393b99d0d285fe24678f75fee
-PlayCountDrums=39
+PlayCountDrums=42
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=25
+ClearCountDrums=26
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=39
-History0=39.20/12/6 Cleared (No chips)
-History1=38.20/11/30 Play canceled
-History2=37.20/11/29 Cleared (No chips)
-History3=36.20/11/26 Play canceled
-History4=35.20/11/23 Cleared (No chips)
+HistoryCount=42
+History0=42.20/12/7 Play canceled
+History1=41.20/12/7 Play canceled
+History2=40.20/12/7 Cleared (No chips)
+History3=39.20/12/6 Cleared (No chips)
+History4=38.20/11/30 Play canceled
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=946940
+Score=683830
 PlaySkill=0
-Skill=Infinity
-Perfect=638
-Great=108
+Skill=0
+Perfect=466
+Great=73
 Good=0
 Poor=0
-Miss=1
-MaxCombo=394
+Miss=208
+MaxCombo=321
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -69,8 +69,8 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=12/06/2020 13:36:17
-Hash=14e80755c09bac8eac2357ef24141d03
+DateTime=12/07/2020 19:28:08
+Hash=6a436a21a34bc51a00621d2affc1f2c2
 HiScore1=0
 HiScore2=0
 HiScore3=0
