--- a/FDK19/packages.config
+++ b/FDK19/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="SlimDX" version="4.0.13.44" targetFramework="net35" requireReinstallation="true" />
+  <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net472" />
+  <package id="ReadJEnc" version="1.3.1.2" targetFramework="net472" />
+  <package id="SlimDX" version="4.0.13.44" targetFramework="net472" />
 </packages>
