各シーンの音声を追加、画像置き換え、いったんSongsフォルダを復帰

--- a/Test/Songs/03-ポーカロイド/107 メルト/メルト.tja.score.ini
+++ b/Test/Songs/03-ポーカロイド/107 メルト/メルト.tja.score.ini
@@ -1,7 +1,7 @@
 [File]
-Title=螺旋周回軌道
-Name=螺旋周回軌道.tja
-Hash=059b78a547bd111197669a806e827b73
+Title=メルト feat.初音ミク
+Name=メルト.tja
+Hash=31fc18b47bce872708815de3c02bb49c
 PlayCountDrums=3
 PlayCountGuitars=0
 PlayCountBass=0
@@ -12,23 +12,23 @@ BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
 HistoryCount=3
-History0=3.20/12/11 Cleared (No chips)
-History1=2.20/12/3 Play canceled
-History2=1.20/12/2 Play canceled
+History0=3.20/12/10 Play canceled
+History1=2.20/12/7 Cleared (No chips)
+History2=1.20/12/7 Play canceled
 History3=
 History4=
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=811600
+Score=970850
 PlaySkill=0
-Skill=Infinity
-Perfect=630
-Great=290
+Skill=0
+Perfect=361
+Great=39
 Good=0
 Poor=0
-Miss=49
-MaxCombo=102
+Miss=0
+MaxCombo=400
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -69,13 +69,13 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=12/11/2020 19:33:01
-Hash=7b6cde45982bacdf9587b36144a58b0e
+DateTime=12/07/2020 21:09:35
+Hash=c744142ce0405e29de36016feb123918
 HiScore1=0
 HiScore2=0
 HiScore3=0
-HiScore4=0
-HiScore5=811600
+HiScore4=970850
+HiScore5=0
 Roll1=0
 Roll2=0
 Roll3=0
