--- a/Test/Songs/08-ナムコオリジナル/儚姫は原初に舞う/儚姫は原初に舞う.tja.score.ini
+++ b/Test/Songs/08-ナムコオリジナル/儚姫は原初に舞う/儚姫は原初に舞う.tja.score.ini
@@ -2,33 +2,33 @@
 Title=ôRïPÇÕå¥èâÇ…ïëÇ§
 Name=ôRïPÇÕå¥èâÇ…ïëÇ§.tja
 Hash=ad6f62e32cfa20e43e7d0c43b938ac0b
-PlayCountDrums=17
+PlayCountDrums=28
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=11
+ClearCountDrums=18
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=17
-History0=17.20/12/8 Cleared (No chips)
-History1=16.20/12/7 Cleared (No chips)
-History2=15.20/12/6 Cleared (No chips)
-History3=14.20/12/6 Cleared (No chips)
-History4=13.20/12/6 Cleared (No chips)
+HistoryCount=28
+History0=28.20/12/11 Cleared (No chips)
+History1=27.20/12/10 Play canceled
+History2=26.20/12/10 Cleared (No chips)
+History3=25.20/12/10 Cleared (No chips)
+History4=24.20/12/9 Cleared (No chips)
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=729220
+Score=935450
 PlaySkill=0
 Skill=Infinity
-Perfect=559
-Great=164
+Perfect=732
+Great=171
 Good=0
 Poor=0
-Miss=191
-MaxCombo=239
+Miss=11
+MaxCombo=238
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -69,13 +69,13 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=12/08/2020 20:34:03
-Hash=4b3741d303f5db6f264e4bfb3652407c
+DateTime=12/11/2020 19:14:43
+Hash=19b3b4990ef9f975ab8a57936f54f0c5
 HiScore1=0
 HiScore2=0
 HiScore3=0
 HiScore4=0
-HiScore5=960510
+HiScore5=964240
 Roll1=0
 Roll2=0
 Roll3=0
