--- a/Test/System/SimpleStyle/OtherConfig.ini
+++ b/Test/System/SimpleStyle/OtherConfig.ini
@@ -1,6 +1,6 @@
 ;Included file
 ;あとは通常通り設定できます
-; TJAPlayer3-Developで追加したSkinConfig
+; TJAPlayer3-Develop-ReWriteで追加したSkinConfig
 
 SongSelect_BoxExplanation_X=0
 SongSelect_BoxExplanation_Y=0
@@ -8,3 +8,4 @@ SongSelect_Title_X=0
 SongSelect_Title_Y=0
 Difficulty_Title_X=0
 Difficulty_Title_Y=0
+SongSelect_GenreName=ポップス,アニメ,ゲームバラエティ,ナムコオリジナル,クラシック,キッズ,ボーカロイド,テスト
