最近遊んだ曲の仮実装、画像を置き変え(ぬぬさんありがとう！)、バグ修正

--- a/Test/System/SimpleStyle/OtherConfig.ini
+++ b/Test/System/SimpleStyle/OtherConfig.ini
@@ -8,4 +8,4 @@ SongSelect_Title_X=0
 SongSelect_Title_Y=0
 Difficulty_Title_X=0
 Difficulty_Title_Y=0
-SongSelect_GenreName=ポップス,アニメ,ゲームバラエティ,ナムコオリジナル,クラシック,キッズ,ボーカロイド,テスト
+SongSelect_GenreName=ポップス,アニメ,ゲームバラエティ,ナムコオリジナル,クラシック,キッズ,ボーカロイド,最近遊んだ曲
