タイトル画面を本家風に①(Pキー長押しでバナパス読み込み)

--- a/Test/System/SimpleStyle/OtherConfig.ini
+++ b/Test/System/SimpleStyle/OtherConfig.ini
@@ -9,3 +9,4 @@ SongSelect_Title_Y=0
 Difficulty_Title_X=0
 Difficulty_Title_Y=0
 SongSelect_GenreName=ポップス,アニメ,ゲームバラエティ,ナムコオリジナル,クラシック,キッズ,ボーカロイド,最近遊んだ曲
+Game_DanC_Dan_Plate=1120,535
