--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
       env: 
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
       with:
-        tag_name: A test release
+        tag_name: release-${{ github.sha }}
         release_name: TJAPlayer3-Develop-ReWrite
         draft: false
         prerelease: false
