(DTXManiaのソースコードを参考に)Input系をSharpDX化 TJAP3-fから移植

--- a/FDK19/FDK19.csproj
+++ b/FDK19/FDK19.csproj
@@ -138,6 +138,7 @@
     <Compile Include="コード\02.入力\DeviceConstantConverter.cs" />
     <Compile Include="コード\02.入力\E入力デバイス種別.cs" />
     <Compile Include="コード\02.入力\IInputDevice.cs" />
+    <Compile Include="コード\02.入力\SlimDXKeys.cs" />
     <Compile Include="コード\02.入力\STInputEvent.cs" />
     <Compile Include="コード\03.サウンド\Cmp3.cs" />
     <Compile Include="コード\03.サウンド\Cogg.cs" />
