--- a/Test/TJAPlayer3-Develop-ReWrite.exe.config
+++ b/Test/TJAPlayer3-Develop-ReWrite.exe.config
@@ -1,12 +1,18 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup useLegacyV2RuntimeActivationPolicy="true">
-    <supportedRuntime version="v4.0"/>
-    <supportedRuntime version="v2.0.50727"/>
+    <supportedRuntime version="v4.0" />
+    <supportedRuntime version="v2.0.50727" />
   </startup>
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<probing privatePath="dll"/>
-		</assemblyBinding>
-	</runtime>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <probing privatePath="dll" />
+    </assemblyBinding>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="SlimDX" publicKeyToken="b1b0c32fd1ffe4f9" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.13.43" newVersion="4.0.13.43" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
