段位選択画面の仮実装！！！！！！！！！！！！！！！！！！！

--- a/TJAPlayer3/TJAPlayer3.csproj
+++ b/TJAPlayer3/TJAPlayer3.csproj
@@ -168,6 +168,8 @@
     <Compile Include="Stages\04.Config\CActConfigKeyAssign.cs" />
     <Compile Include="Stages\04.Config\CActConfigList.cs" />
     <Compile Include="Stages\04.Config\CStageコンフィグ.cs" />
+    <Compile Include="Stages\05.DaniSelect\CActSelect段位リスト.cs" />
+    <Compile Include="Stages\05.DaniSelect\CStage段位選択.cs" />
     <Compile Include="Stages\05.SongSelect\CActSelectArtistComment.cs" />
     <Compile Include="Stages\05.SongSelect\CActSelectInformation.cs" />
     <Compile Include="Stages\05.SongSelect\CActSelectPopupMenu.cs" />
