--- a/Test/09-サンプル譜面/挑戦!サンプル段位認定/挑戦!サンプル段位認定.tja.score.ini
+++ b/Test/09-サンプル譜面/挑戦!サンプル段位認定/挑戦!サンプル段位認定.tja.score.ini
@@ -1,34 +1,34 @@
 [File]
-Title=達人
-Name=達人.tja
-Hash=26fb17695c89537f30f3da244b260e4e
-PlayCountDrums=6
+Title=挑戦!サンプル段位認定
+Name=挑戦!サンプル段位認定.tja
+Hash=26371a122f5b519beb7806849de32d43
+PlayCountDrums=2
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=2
+ClearCountDrums=0
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=6
-History0=6.20/12/31 Cleared (No chips)
-History1=5.20/12/31 Play canceled
-History2=4.20/12/30 Play canceled
-History3=3.20/12/30 Play canceled
-History4=2.20/12/30 Play canceled
+HistoryCount=2
+History0=2.20/12/31 Play canceled
+History1=1.20/12/31 Play canceled
+History2=
+History3=
+History4=
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=316740
+Score=0
 PlaySkill=0
-Skill=Infinity
-Perfect=789
-Great=273
+Skill=0
+Perfect=0
+Great=0
 Good=0
 Poor=0
-Miss=21
-MaxCombo=186
+Miss=0
+MaxCombo=0
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -60,7 +60,7 @@ Guitar=1
 Drums=1
 StageFailed=1
 DamageLevel=1
-UseKeyboard=1
+UseKeyboard=0
 UseMIDIIN=0
 UseJoypad=0
 UseMouse=0
@@ -68,9 +68,9 @@ PerfectRange=30
 GreatRange=-1
 GoodRange=100
 PoorRange=130
-DTXManiaVersion=1.5.7
-DateTime=12/31/2020 18:03:34
-Hash=5895f94a611fca3f94a3d7fc13705b7a
+DTXManiaVersion=Unknown
+DateTime=
+Hash=00000000000000000000000000000000
 HiScore1=0
 HiScore2=0
 HiScore3=0
