--- a/TJAPlayer3/TJAPlayer3.csproj
+++ b/TJAPlayer3/TJAPlayer3.csproj
@@ -38,6 +38,7 @@
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
+    <LargeAddressAware>true</LargeAddressAware>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -317,6 +318,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="LargeAddressAware">
+      <Version>1.0.5</Version>
+    </PackageReference>
     <PackageReference Include="ReadJEnc">
       <Version>1.3.1.2</Version>
     </PackageReference>
@@ -332,9 +336,6 @@
     <PackageReference Include="SharpDX.DirectSound">
       <Version>4.2.0</Version>
     </PackageReference>
-    <PackageReference Include="SlimDX">
-      <Version>4.0.13.44</Version>
-    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -345,16 +346,14 @@
   </Target>
   -->
   <PropertyGroup>
-    <PostBuildEvent>
-move /y "$(TargetDir)FDK.dll" "$(SolutionDir)Test\dll\"
+    <PostBuildEvent>move /y "$(TargetDir)FDK.dll" "$(SolutionDir)Test\dll\"
 move /y "$(TargetDir)FDK.pdb" "$(SolutionDir)Test\dll\"
 move /y "$(TargetDir)Bass.Net.dll" "$(SolutionDir)Test\dll\"
 move /y "$(TargetDir)DirectShowLib-2005.dll" "$(SolutionDir)Test\dll\"
 move /y "$(TargetDir)SlimDX.dll" "$(SolutionDir)Test\dll\"
 move /y "$(TargetDir)CSharpTest.Net.Collections.*" "$(SolutionDir)Test\dll\"
 copy /y "$(SolutionDir)Readme.txt" "$(SolutionDir)Test\"
-call "$(DevEnvDir)..\Tools\VsDevCmd.bat"
-"$(SolutionDir)editbin\editbin.exe" /LARGEADDRESSAWARE "$(SolutionDir)Test\TJAPlayer3-Develop-ReWrite.exe"</PostBuildEvent>
+call "$(DevEnvDir)..\Tools\VsDevCmd.bat"</PostBuildEvent>
   </PropertyGroup>
   <Import Project="packages\SharpDX.2.6.3\build\SharpDX.targets" Condition="Exists('packages\SharpDX.2.6.3\build\SharpDX.targets')" />
 </Project>
