段位の上背景の実装、曲ごとの条件を指定できるように！！！！！！！！！！！！！！！

--- a/Test/09-サンプル譜面/挑戦!サンプル段位認定/挑戦!サンプル段位認定.tja.score.ini
+++ b/Test/09-サンプル譜面/挑戦!サンプル段位認定/挑戦!サンプル段位認定.tja.score.ini
@@ -2,33 +2,33 @@
 Title=挑戦!サンプル段位認定
 Name=挑戦!サンプル段位認定.tja
 Hash=26371a122f5b519beb7806849de32d43
-PlayCountDrums=2
+PlayCountDrums=3
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=0
+ClearCountDrums=1
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=2
-History0=2.20/12/31 Play canceled
-History1=1.20/12/31 Play canceled
-History2=
+HistoryCount=3
+History0=3.21/1/8 Cleared (No chips)
+History1=2.20/12/31 Play canceled
+History2=1.20/12/31 Play canceled
 History3=
 History4=
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=0
+Score=234410
 PlaySkill=0
-Skill=0
-Perfect=0
-Great=0
+Skill=Infinity
+Perfect=221
+Great=74
 Good=0
 Poor=0
-Miss=0
-MaxCombo=0
+Miss=179
+MaxCombo=48
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -60,7 +60,7 @@ Guitar=1
 Drums=1
 StageFailed=1
 DamageLevel=1
-UseKeyboard=0
+UseKeyboard=1
 UseMIDIIN=0
 UseJoypad=0
 UseMouse=0
@@ -68,9 +68,9 @@ PerfectRange=30
 GreatRange=-1
 GoodRange=100
 PoorRange=130
-DTXManiaVersion=Unknown
-DateTime=
-Hash=00000000000000000000000000000000
+DTXManiaVersion=1.5.7
+DateTime=01/08/2021 14:40:49
+Hash=571bd73475b01ccf30283045aa101942
 HiScore1=0
 HiScore2=0
 HiScore3=0
