--- a/Test/09-段位道場/39グリーン超人/グリーンver.超人.tja.score.ini
+++ b/Test/09-段位道場/39グリーン超人/グリーンver.超人.tja.score.ini
@@ -2,33 +2,33 @@
 Title=超人
 Name=グリーンver.超人.tja
 Hash=8b3c7e88ce580f90b990ea8d40fa4335
-PlayCountDrums=27
+PlayCountDrums=35
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=5
+ClearCountDrums=9
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=27
-History0=27.20/12/31 Play canceled
-History1=26.20/12/31 Play canceled
-History2=25.20/12/31 Play canceled
-History3=24.20/12/31 Play canceled
-History4=23.20/12/31 Play canceled
+HistoryCount=35
+History0=35.21/1/8 Cleared (No chips)
+History1=34.21/1/8 Cleared (No chips)
+History2=33.21/1/8 Cleared (No chips)
+History3=32.21/1/8 Play canceled
+History4=31.21/1/8 Play canceled
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=288580
+Score=2534070
 PlaySkill=0
-Skill=0
-Perfect=768
-Great=104
+Skill=Infinity
+Perfect=2517
+Great=323
 Good=0
 Poor=0
-Miss=5
-MaxCombo=582
+Miss=81
+MaxCombo=331
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -69,8 +69,8 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=12/30/2020 16:01:28
-Hash=f1eed5060a4497c8856b7c38c03fd2c2
+DateTime=01/08/2021 22:00:57
+Hash=abbb4ba3e976a2f7e4dd04f709bc9bc9
 HiScore1=0
 HiScore2=0
 HiScore3=0
