段位の金合格時のゲージを実装

--- a/Test/09-段位道場/39グリーン超人/グリーンver.超人.tja.score.ini
+++ b/Test/09-段位道場/39グリーン超人/グリーンver.超人.tja.score.ini
@@ -2,7 +2,7 @@
 Title=超人
 Name=グリーンver.超人.tja
 Hash=8b3c7e88ce580f90b990ea8d40fa4335
-PlayCountDrums=38
+PlayCountDrums=41
 PlayCountGuitars=0
 PlayCountBass=0
 ClearCountDrums=11
@@ -11,18 +11,18 @@ ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=38
-History0=38.21/1/8 Cleared (No chips)
-History1=37.21/1/8 Play canceled
-History2=36.21/1/8 Cleared (No chips)
-History3=35.21/1/8 Cleared (No chips)
-History4=34.21/1/8 Cleared (No chips)
+HistoryCount=41
+History0=41.21/1/8 Play canceled
+History1=40.21/1/8 Play canceled
+History2=39.21/1/8 Play canceled
+History3=38.21/1/8 Cleared (No chips)
+History4=37.21/1/8 Play canceled
 BGMAdjust=0
 
 [HiScore.Drums]
 Score=2708340
 PlaySkill=0
-Skill=Infinity
+Skill=0
 Perfect=2518
 Great=336
 Good=0
