一旦コメントアウト。

--- a/Test/09-サンプル譜面/挑戦!サンプル段位認定/挑戦!サンプル段位認定.tja.score.ini
+++ b/Test/09-サンプル譜面/挑戦!サンプル段位認定/挑戦!サンプル段位認定.tja.score.ini
@@ -2,33 +2,33 @@
 Title=挑戦!サンプル段位認定
 Name=挑戦!サンプル段位認定.tja
 Hash=26371a122f5b519beb7806849de32d43
-PlayCountDrums=3
+PlayCountDrums=4
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=1
+ClearCountDrums=2
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=3
-History0=3.21/1/8 Cleared (No chips)
-History1=2.20/12/31 Play canceled
-History2=1.20/12/31 Play canceled
-History3=
+HistoryCount=4
+History0=4.21/1/9 Cleared (No chips)
+History1=3.21/1/8 Cleared (No chips)
+History2=2.20/12/31 Play canceled
+History3=1.20/12/31 Play canceled
 History4=
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=234410
+Score=2909050
 PlaySkill=0
 Skill=Infinity
-Perfect=221
-Great=74
+Perfect=1171
+Great=114
 Good=0
 Poor=0
-Miss=179
-MaxCombo=48
+Miss=4
+MaxCombo=599
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -69,8 +69,8 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=01/08/2021 14:40:49
-Hash=571bd73475b01ccf30283045aa101942
+DateTime=01/09/2021 00:06:37
+Hash=c94332b0d519cc3db205a17202b920b9
 HiScore1=0
 HiScore2=0
 HiScore3=0
