--- a/Test/09-サンプル譜面/挑戦!サンプル段位認定/挑戦!サンプル段位認定.tja.score.ini
+++ b/Test/09-サンプル譜面/挑戦!サンプル段位認定/挑戦!サンプル段位認定.tja.score.ini
@@ -2,7 +2,7 @@
 Title=挑戦!サンプル段位認定
 Name=挑戦!サンプル段位認定.tja
 Hash=26371a122f5b519beb7806849de32d43
-PlayCountDrums=6
+PlayCountDrums=7
 PlayCountGuitars=0
 PlayCountBass=0
 ClearCountDrums=4
@@ -11,18 +11,18 @@ ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=6
-History0=6.21/1/9 Cleared (No chips)
-History1=5.21/1/9 Cleared (No chips)
-History2=4.21/1/9 Cleared (No chips)
-History3=3.21/1/8 Cleared (No chips)
-History4=2.20/12/31 Play canceled
+HistoryCount=7
+History0=7.21/1/9 Play canceled
+History1=6.21/1/9 Cleared (No chips)
+History2=5.21/1/9 Cleared (No chips)
+History3=4.21/1/9 Cleared (No chips)
+History4=3.21/1/8 Cleared (No chips)
 BGMAdjust=0
 
 [HiScore.Drums]
 Score=3293000
 PlaySkill=0
-Skill=Infinity
+Skill=0
 Perfect=1241
 Great=48
 Good=0
