バグ修正、本当にすみませんでした

--- a/Test/09-段位道場/39グリーン超人/グリーンver.超人.tja.score.ini
+++ b/Test/09-段位道場/39グリーン超人/グリーンver.超人.tja.score.ini
@@ -2,33 +2,33 @@
 Title=超人
 Name=グリーンver.超人.tja
 Hash=8b3c7e88ce580f90b990ea8d40fa4335
-PlayCountDrums=45
+PlayCountDrums=47
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=12
+ClearCountDrums=13
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=45
-History0=45.21/1/9 Play canceled
-History1=44.21/1/9 Play canceled
-History2=43.21/1/9 Cleared (No chips)
-History3=42.21/1/9 Play canceled
-History4=41.21/1/8 Play canceled
+HistoryCount=47
+History0=47.21/1/9 Cleared (No chips)
+History1=46.21/1/9 Play canceled
+History2=45.21/1/9 Play canceled
+History3=44.21/1/9 Play canceled
+History4=43.21/1/9 Cleared (No chips)
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=1112540
+Score=2127600
 PlaySkill=0
-Skill=0
-Perfect=807
-Great=67
+Skill=Infinity
+Perfect=1695
+Great=173
 Good=0
 Poor=0
-Miss=3
-MaxCombo=836
+Miss=9
+MaxCombo=829
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -69,8 +69,8 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=01/09/2021 12:12:51
-Hash=a7fbd5d0b2698064ea33b11d2915775e
+DateTime=01/09/2021 15:42:49
+Hash=3bc4a6ff4b616b3d967f6397f7283a4a
 HiScore1=0
 HiScore2=0
 HiScore3=0
