段位演奏画面ほぼ完全実装

--- a/Test/09-段位道場/39グリーン超人/グリーンver.超人.tja.score.ini
+++ b/Test/09-段位道場/39グリーン超人/グリーンver.超人.tja.score.ini
@@ -2,33 +2,33 @@
 Title=超人
 Name=グリーンver.超人.tja
 Hash=8b3c7e88ce580f90b990ea8d40fa4335
-PlayCountDrums=47
+PlayCountDrums=54
 PlayCountGuitars=0
 PlayCountBass=0
-ClearCountDrums=13
+ClearCountDrums=16
 ClearCountGuitars=0
 ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=47
-History0=47.21/1/9 Cleared (No chips)
-History1=46.21/1/9 Play canceled
-History2=45.21/1/9 Play canceled
-History3=44.21/1/9 Play canceled
-History4=43.21/1/9 Cleared (No chips)
+HistoryCount=54
+History0=54.21/1/15 Play canceled
+History1=53.21/1/15 Cleared (No chips)
+History2=52.21/1/12 Play canceled
+History3=51.21/1/11 Play canceled
+History4=50.21/1/11 Play canceled
 BGMAdjust=0
 
 [HiScore.Drums]
-Score=2127600
+Score=83240
 PlaySkill=0
-Skill=Infinity
-Perfect=1695
-Great=173
+Skill=0
+Perfect=86
+Great=23
 Good=0
 Poor=0
-Miss=9
-MaxCombo=829
+Miss=768
+MaxCombo=106
 TotalChips=0
 AutoPlay=00000000000000000000000
 Risky=0
@@ -69,8 +69,8 @@ GreatRange=-1
 GoodRange=100
 PoorRange=130
 DTXManiaVersion=1.5.7
-DateTime=01/09/2021 15:42:49
-Hash=3bc4a6ff4b616b3d967f6397f7283a4a
+DateTime=01/15/2021 19:55:44
+Hash=61fe365c31fd3d7431ccc6a06fcca290
 HiScore1=0
 HiScore2=0
 HiScore3=0
