--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,15 @@
 /Test/dll/SlimDX.*
 /Test/NamePlate.json
 /Test/Songs/*
+/Test/xadec.dll
+/Test/SoundDecoder.dll
+/Test/msvcr90.dll
+/Test/msvcp90.dll
+/Test/msvcm90.dll
+/Test/Microsoft.VC90.CRT.manifest
+/Test/bass_fx.dll
+/Test/bass.dll
+/Test/bassasio.dll
+/Test/bassenc.dll
+/Test/bassmix.dll
+/Test/basswasapi.dll
