--- a/TJAPlayer3/TJAPlayer3.csproj
+++ b/TJAPlayer3/TJAPlayer3.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Stages\04.Config\CStageコンフィグ.cs" />
     <Compile Include="Stages\05.DaniSelect\CActSelect段位リスト.cs" />
     <Compile Include="Stages\05.DaniSelect\CStage段位選択.cs" />
+    <Compile Include="Stages\05.SongSelect\CActPlayOption.cs" />
     <Compile Include="Stages\05.SongSelect\CActSelectArtistComment.cs" />
     <Compile Include="Stages\05.SongSelect\CActSelectInformation.cs" />
     <Compile Include="Stages\05.SongSelect\CActSelectPopupMenu.cs" />
