風船連打の途中にやり直すと、キャラが消える問題の修正

--- a/Test/09-サンプル譜面/ShakujiiPark/ShakujiiPark.tja.score.ini
+++ b/Test/09-サンプル譜面/ShakujiiPark/ShakujiiPark.tja.score.ini
@@ -2,7 +2,7 @@
 Title=ShakujiiPark
 Name=ShakujiiPark.tja
 Hash=2e07e9663a722866f0a3401d2b9edec8
-PlayCountDrums=0
+PlayCountDrums=1
 PlayCountGuitars=0
 PlayCountBass=0
 ClearCountDrums=0
@@ -11,8 +11,8 @@ ClearCountBass=0
 BestRankDrums=99
 BestRankGuitar=99
 BestRankBass=99
-HistoryCount=0
-History0=
+HistoryCount=1
+History0=1.21/3/6 Stage failed
 History1=
 History2=
 History3=
