--- a/Test/System/SimpleStyle/OtherConfig.ini
+++ b/Test/System/SimpleStyle/OtherConfig.ini
@@ -6,7 +6,7 @@ SongSelect_BoxExplanation_X=0
 SongSelect_BoxExplanation_Y=0
 SongSelect_Title_X=0
 SongSelect_Title_Y=0
-Difficulty_Title_X=0
-Difficulty_Title_Y=0
+SongSelect_BoxExplanation_Interval=30
+
 SongSelect_GenreName=ポップス,アニメ,ゲームバラエティ,ナムコオリジナル,クラシック,キッズ,ボーカロイド,最近遊んだ曲
 Game_DanC_Dan_Plate=1120,535
