とりあえず

--- a/FDK19/FDK19.csproj
+++ b/FDK19/FDK19.csproj
@@ -13,8 +13,7 @@
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>Open_Tamago.pfx</AssemblyOriginatorKeyFile>
     <ApplicationIcon>
     </ApplicationIcon>
     <FileUpgradeFlags>
@@ -189,6 +188,9 @@
     <PackageReference Include="SlimDX">
       <Version>4.0.13.44</Version>
     </PackageReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Open_Tamago.pfx" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
