--- a/FDK19/FDK19.csproj
+++ b/FDK19/FDK19.csproj
@@ -190,7 +190,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Open_Tamago.pfx" />
+    <None Include="" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
