Judge修正(Autoの時に不可しか表示されなかったです、すみません。)、大型アプデ①(段位選択画面の進化、段位のバグ修正、タイトル画面のモード選択画面の追加)

--- a/TJAPlayer3/TJAPlayer3.csproj
+++ b/TJAPlayer3/TJAPlayer3.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Stages\04.Config\CActConfigList.cs" />
     <Compile Include="Stages\04.Config\CStageコンフィグ.cs" />
     <Compile Include="Stages\05.DaniSelect\CActSelect段位リスト.cs" />
+    <Compile Include="Stages\05.DaniSelect\CActSelect段位挑戦選択画面.cs" />
     <Compile Include="Stages\05.DaniSelect\CStage段位選択.cs" />
     <Compile Include="Stages\05.SongSelect\CActPlayOption.cs" />
     <Compile Include="Stages\05.SongSelect\CActSelectArtistComment.cs" />
