--- a/Test/System/SimpleStyle/OtherConfig.ini
+++ b/Test/System/SimpleStyle/OtherConfig.ini
@@ -8,5 +8,5 @@ SongSelect_Title_X=0
 SongSelect_Title_Y=0
 SongSelect_BoxExplanation_Interval=30
 
-SongSelect_GenreName=ポップス,アニメ,ゲームバラエティ,ナムコオリジナル,クラシック,キッズ,ボーカロイド,最近遊んだ曲
+SongSelect_GenreName=ポップス,アニメ,ゲームバラエティ,ナムコオリジナル,クラシック,バラエティ,キッズ,ボーカロイド,最近遊んだ曲
 Game_DanC_Dan_Plate=1120,535
