修正他難易度同時再生の実装(仮)、ファイル整理

--- a/TJAPlayer3/TJAPlayer3.csproj
+++ b/TJAPlayer3/TJAPlayer3.csproj
@@ -347,6 +347,14 @@
   <PropertyGroup>
     <PostBuildEvent>move /y "$(TargetDir)FDK.dll" "$(SolutionDir)Test\dll\"
 move /y "$(TargetDir)FDK.pdb" "$(SolutionDir)Test\dll\"
+move /y "$(TargetDir)Hnx8.ReadJEnc.*" "$(SolutionDir)Test\dll\"
+move /y "$(TargetDir)Newtonsoft.Json.*" "$(SolutionDir)Test\dll\"
+move /y "$(TargetDir)SharpDX.Direct3D9.*" "$(SolutionDir)Test\dll\"
+move /y "$(TargetDir)SharpDX.DirectInput.*" "$(SolutionDir)Test\dll\"
+move /y "$(TargetDir)SharpDX.DirectSound.*" "$(SolutionDir)Test\dll\"
+move /y "$(TargetDir)SharpDX.DXGI.*" "$(SolutionDir)Test\dll\"
+move /y "$(TargetDir)SharpDX.Mathematics.*" "$(SolutionDir)Test\dll\"
+move /y "$(TargetDir)SharpDX.*" "$(SolutionDir)Test\dll\"
 move /y "$(TargetDir)Bass.Net.dll" "$(SolutionDir)Test\dll\"
 move /y "$(TargetDir)DirectShowLib-2005.dll" "$(SolutionDir)Test\dll\"
 move /y "$(TargetDir)SlimDX.dll" "$(SolutionDir)Test\dll\"
