--- a/Test/System/SimpleStyle/SkinConfig.ini
+++ b/Test/System/SimpleStyle/SkinConfig.ini
@@ -2,7 +2,7 @@
 ;Skin information
 Name=Develop-Style
 Version=0.1
-Creator=touhou-renren and discord server menber
+Creator=touhou-renren and discord server members
 
 Game_Score_Size=26,34
 
