--- a/Test/System/EngNijiro/SkinConfig.ini
+++ b/Test/System/EngNijiro/SkinConfig.ini
@@ -1,16 +1,16 @@
 ;スキンの情報設定
 ;Skin information
-Name=DRW-EngNijiro
-Version=0.1 Alpha
-Creator=Translation:CYakigasi
+Name=English-Style
+Version=0.2
+Creator=(translation:CYakigasi)
 
 Game_Score_Size=26,34
 
 Game_Taiko_NamePlate_X=-5,-5
 Game_Taiko_NamePlate_Y=297,371
 
-SongSelect_Auto_X=35,950
-SongSelect_Auto_Y=642,645
+SongSelect_Auto_X=35,1019
+SongSelect_Auto_Y=642,642
 
 ; "#include ファイル名" 命令を使うことで
 ; 外部ファイルを読み込んで使用することができるようになります
