--- a/Config.ini
+++ b/Config.ini
@@ -3,7 +3,7 @@
 
 ; リリースバージョン
 ; Release Version.
-Version=1.4.5
+Version=1.5.7
 
 ; 譜面ファイルが格納されているフォルダへのパス。
 ; セミコロン(;)で区切ることにより複数のパスを指定できます。（例: d:\tja\;e:\tja2\）
@@ -35,11 +35,11 @@ WindowHeight=720
 
 ; ウィンドウモード時の位置X
 ; X position in the window mode.
-WindowX=0
+WindowX=310
 
 ; ウィンドウモード時の位置Y
 ; Y position in the window mode.
-WindowY=0
+WindowY=152
 
 ; ウインドウをダブルクリックした時にフルスクリーンに移行するか(0:移行しない,1:移行する)
 ; Whether double click to go full screen mode or not.(0:No, 1:Yes)
@@ -56,10 +56,6 @@ BackSleep=1
 ; フォントレンダリングに使用するフォント名
 ; Font name used for font rendering.
 FontName=MS UI Gothic
-
-; Boxの説明文のフォントレンダリングに使用するフォント名
-; Font name used for font rendering.
-BoxFontName=MS UI Gothic
 
 ; 垂直帰線同期(0:OFF,1:ON)
 VSyncWait=1
@@ -86,10 +82,7 @@ WASAPIBufferSizeMs=50
 ; 存在しないデバイスを指定すると、DTXManiaが起動しないことがあります。
 ; Sound device used by ASIO.
 ; Don't specify unconnected device, as the DTXMania may not bootup.
-; 0: ASIO4ALL v2
-; 1: Voicemeeter AUX Virtual ASIO
-; 2: Voicemeeter Insert Virtual ASIO
-; 3: Voicemeeter Virtual ASIO
+; 0: None
 ASIODevice=0
 
 ; WASAPI/ASIO時に使用する演奏タイマーの種類
@@ -111,7 +104,7 @@ AVI=0
 BGA=1
 
 ; 動画表示モード( 0:表示しない, 1:背景のみ, 2:窓表示のみ, 3:両方)
-ClipDispType=0
+ClipDispType=1
 
 ; 曲選択からプレビュー音の再生までのウェイト[ms]
 PreviewSoundWait=1000
@@ -149,19 +142,28 @@ ApplySongVol=0
 
 ; 効果音の音量 (0-100%)
 ; Sound effect level (0-100%)
-SoundEffectLevel=80
+SoundEffectLevel=100
 
 ; 各ボイス、コンボボイスの音量 (0-100%)
 ; Voice level (0-100%)
 VoiceLevel=90
 
+; 選曲画面のプレビュー時の音量 (0-100%)
+; Song preview level (0-100%)
+SongPreviewLevel=80
+
 ; ゲーム中の音源の音量 (0-100%)
 ; Song playback level (0-100%)
-SongPlaybackLevel=90
+SongPlaybackLevel=100
 
 ; キーボードによる音量変更の増加量、減少量 (1-20)
 ; Keyboard sound level increment (1-20)
 KeyboardSoundLevelIncrement=5
+
+; 2P演奏時に叩いた音を左右別々にならすか (0:OFF, 1:ON)
+; Use panning for SE (0:OFF, 1:ON)
+UsePanning=1
+
 ; 音源再生前の空白時間 (ms)
 ; Blank time before music source to play. (ms)
 MusicPreTimeMs=1000
@@ -197,7 +199,7 @@ DirectShowMode=0
 
 ; 判定タイミング調整(-99～99)[ms]
 ; Revision value to adjust judgment timing.
-InputAdjustTime=0
+InputAdjustTime=11
 
 ; 判定ラインの表示位置調整(ドラム, ギター, ベース)(-99～99)[px]
 ; Offset value to adjust displaying judgement line for the drums, guitar and bass.
@@ -283,8 +285,8 @@ Risky=0
 ; TIGHT mode. 0=OFF, 1=ON 
 DrumsTight=0
 
-; ドラム譜面スクロール速度(0:x0.1, 9:x1.0, 14:x1.5,…,1999:x200.0)
-DrumsScrollSpeed=9
+; ドラム譜面スクロール速度(0:x0.5, 1:x1.0, 2:x1.5,…,1999:x1000.0)
+DrumsScrollSpeed=1
 
 ; 演奏速度(5～40)(→x5/20～x40/20)
 PlaySpeed=20
@@ -303,7 +305,7 @@ ScoreMode=2
 
 ; 真打モード (0:OFF, 1:ON)
 ; Fixed score mode (0:OFF, 1:ON)
-ShinuchiMode=0
+ShinuchiMode=1
 ; 大音符の両手入力待機時間(ms)
 BigNotesWaitTime=50
 
@@ -372,14 +374,14 @@ PlayerCount=1
 
 [DrumsKeyAssign]
 
-LeftRed=K015
-RightRed=K019
-LeftBlue=K013
-RightBlue=K020
-LeftRed2P=K011
-RightRed2P=K023
-LeftBlue2P=K012
-RightBlue2P=K047
+LeftRed=K016,K015
+RightRed=K017,K019
+LeftBlue=K028,K013
+RightBlue=K020,K021
+LeftRed2P=K031,K011
+RightRed2P=K022,K023
+LeftBlue2P=K033,K012
+RightBlue2P=K0111,K047
 
 [SystemKeyAssign]
 
