--- a/Config.ini
+++ b/Config.ini
@@ -55,7 +55,7 @@ BackSleep=1
 
 ; フォントレンダリングに使用するフォント名
 ; Font name used for font rendering.
-FontName=FOT-大江戸勘亭流 Std E
+FontName=MS UI Gothic
 
 ; 垂直帰線同期(0:OFF,1:ON)
 VSyncWait=1
